# gateway-addon-rust

./: Cargo.toml  README.md
.github/workflows/: build.yml  doc-coverage-badge.yml  doc-coverage-pr-comment.yml
gateway-addon-rust-codegen/: Cargo.toml  rustfmt.toml
gateway-addon-rust-codegen/src/: lib.rs
src/: action.rs  action_description.rs  adapter.rs  api_error.rs  api_handler.rs  client.rs  database.rs  device.rs  device_description.rs  error.rs  event.rs  event_description.rs  example.rs  lib.rs  message_handler.rs  plugin.rs  property.rs  property_description.rs  type_.rs
src/action/: action_description.rs  action_handle.rs  action_input.rs  action_trait.rs  mod.rs
src/adapter/: adapter_builder.rs  adapter_handle.rs  adapter_macro.rs  adapter_message_handler.rs  adapter_trait.rs  mod.rs
src/api_handler/: api_handler_handle.rs  api_handler_macro.rs  api_handler_message_handler.rs  api_handler_trait.rs  mod.rs
src/device/: device_builder.rs  device_description.rs  device_handle.rs  device_macro.rs  device_macros.rs  device_message_handler.rs  device_structure.rs  device_trait.rs  mod.rs
src/event/: event_builder.rs  event_data.rs  event_description.rs  event_handle.rs  event_macro.rs  event_trait.rs  mod.rs
src/plugin/: mod.rs  plugin_connection.rs  plugin_message_handler.rs  plugin_struct.rs
src/property/: mod.rs  property_builder.rs  property_description.rs  property_handle.rs  property_macro.rs  property_structure.rs  property_trait.rs  property_value.rs
tests/: codegen.rs  codegen_visibility.rs
