[package]
name = "gateway-addon-rust"
version = "1.0.0-alpha.1"
edition = "2018"

[dependencies]
log = "0.4"
thiserror = "1.0"
url = "2.2"
sqlite = "0.26"
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1"
tungstenite = "0.14"
tokio-tungstenite = "0.15"
webthings-gateway-ipc-types = "1.0.0-alpha.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["sync", "time"]
