[package]
name = "gateway-addon-rust"
version = "1.0.0-alpha.1"
edition = "2018"

[dependencies]
log = "0.4"
thiserror = "1.0"
url = "2.2"
sqlite = "0.26"
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1"
tungstenite = "0.14"
tokio-tungstenite = "0.15"
webthings-gateway-ipc-types = "1.0.0-alpha.2"
schemars = "0.8.6"
jsonschema = "0.12.1"
chrono = "0.4.19"
as-any = "0.2.0"
mockall_double = "0.2.0"
gateway-addon-rust-codegen = { path = "gateway-addon-rust-codegen" }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["sync", "time", "macros"]

[dev-dependencies]
mockall = "0.10"
rstest = "0.11.0"

[dev-dependencies.tokio]
version = "1"
features = ["rt", "macros"]
